[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "txs"
version = "1.0.0"
description = "Terminal Stock Analysis Tool - Quick financial data and charts from command line"
authors = [{name = "Jakub Jeziorny"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["finance", "stocks", "terminal", "analysis", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Environment :: Console",
]

dependencies = [
    "yfinance>=0.2.0",
    "pandas>=1.5.0",
    "tabulate>=0.9.0",
    "plotext>=5.0.0",
]

[project.scripts]
txs = "txs:main"

[project.urls]
Homepage = "https://github.com/jakubjeziorny/TXS"
Repository = "https://github.com/jakubjeziorny/TXS"
Issues = "https://github.com/jakubjeziorny/TXS/issues"

[tool.setuptools]
py-modules = ["txs"]